reoganize image features, add face scanner feature
